integrated auth0 on patients routes. Added identity verification.
