# src/api/routes.ts
@@ -3,23 +3,23 @@ import ROUTES from "~/constants/routes";
 import appointmentHandler from "./handlers/AppointmentHandler";
 import doctorHandler from "./handlers/DoctorHandler";
 import patientHandler from "./handlers/PatientHandler";
+import { checkJwt } from "./security";
 
 const api = Router();
 
 /**
  * Appointments routes
  */
-api.route(ROUTES.APPOINTMENTS.BY_ID)
-    .put(appointmentHandler.bookAppointment)
+api.put(ROUTES.APPOINTMENTS.BY_ID, checkJwt, appointmentHandler.bookAppointment)
 api.get(ROUTES.APPOINTMENTS.ALL, appointmentHandler.findAll);
 
 /**
  * Patients routes
  */
-api.get(ROUTES.PATIENT.BY_ID, patientHandler.getProfile);
-api.get(ROUTES.PATIENT.APPOINTMENTS.ALL, patientHandler.getAppointments);
-api.get(ROUTES.PATIENT.TREATMENTS.ALL, patientHandler.getTreatments);
-api.delete(ROUTES.PATIENT.APPOINTMENTS.BY_ID, appointmentHandler.cancelAppointment)
+api.get(ROUTES.PATIENT.BY_ID, checkJwt, patientHandler.getProfile);
+api.get(ROUTES.PATIENT.APPOINTMENTS.ALL, checkJwt, patientHandler.getAppointments);
+api.get(ROUTES.PATIENT.TREATMENTS.ALL, checkJwt, patientHandler.getTreatments);
+api.delete(ROUTES.PATIENT.APPOINTMENTS.BY_ID, checkJwt, appointmentHandler.cancelAppointment)
 
 /**
  * Doctors routes
