# src/api/swagger/swagger.yaml
@@ -374,7 +374,16 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Error"
-        
+  
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
+
+security:
+  - bearerAuth: []
+
     
 
         
